testing mobile side border removal

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <div class="row" style="margin:0">
         <div class="col-sm-12 col-md-6">
-            <div class="row" style="border-right: 2pt solid black;">
+            <div class="row left-section">
                 <div class="col-12 top-left-slant">
                     <img src="./assets/banner.png" class="banner" alt="FUQ! Podcast Banner">
                 </div>
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-6">
-            <div class="row" style="border-left: 2pt solid black">
+            <div class="row right-section">
                 <div class="col-12 top-right-slant">
                     test 2
                 </div>
