--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <div class="row" style="margin:0">
+    <div class="row" style="margin:0;">
         <div class="col-sm-12 col-md-6">
             <div class="row left-section">
                 <div class="col-12 top-left-slant">
