added temporary/example podcast feed

--- a/index.html
+++ b/index.html
@@ -42,13 +42,17 @@
                     <img src="./assets/banner.png" class="banner" alt="FUQ! Podcast Banner">
                 </div>
                 <div class="col-12 bottom-left-slant">
-                    <div class="row">
-                        <div class="col" style="padding-top: 2.5vh">
-                            testing left
-                        </div>
-                        <div class="col">
-                            testing right
-                        </div>
+                    <div class="row overflow-scroll" id="episodeList">
+                        <!-- <div class="col-sm-12 col-md-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    test
+                                </div>
+                                <div class="card-body">
+                                    testing
+                                </div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -60,16 +64,24 @@
                 </div>
                 <div class="col-12 middle-right-slant">
                     <div class="middle-content">
-                        testing 2
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6" style=" text-align: center">
+                                <img src="./assets/FUQ!LogoWithBG.png" width="75%" style="border-radius: 10px" alt="FUQ! Podcast Logo">
+                            </div>
+                            <div class="col">
+                                <h3>Why Do I Give A FUQ?</h3>
+                                <p>idk what to put here i guess something about the podcast like what it is and what started it or something kind of professional?</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3 m-auto"><a class="external-links" href="https://www.google.com" target=_blank>SPOTIFY</a></div>
+                            <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>ITUNES</a></div>
+                            <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>CAPTIVATE</a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 bottom-right-slant">
                     <div class="row" style="padding-top:5%; text-align: center">
-                        <div class="col padding-box">
-                            <div class="black-box m-auto">
-                                <div class="black-box-text">test</div>
-                            </div>
-                        </div>
                         <div class="col padding-box">
                             <div class="black-box m-auto">
                                 <div class="black-box-text">test</div>
@@ -96,7 +108,7 @@
         </div>
     </div>
 
-
+    <script src="./js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
