--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="col-sm-12 col-md-6">
             <div class="row right-section">
                 <div class="col-12 top-right-slant">
-                    test 2
+                    This is where the about me section will go
                 </div>
                 <div class="col-12 middle-right-slant">
                     <div class="middle-content">
@@ -71,6 +71,14 @@
                             <div class="col">
                                 <h3>Why Do I Give A FUQ?</h3>
                                 <p>idk what to put here i guess something about the podcast like what it is and what started it or something kind of professional?</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Subscribe to our newsletter!</label>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                                  </div>
                             </div>
                         </div>
                         <div class="row">
