--- a/index.html
+++ b/index.html
@@ -66,25 +66,30 @@
                     <div class="middle-content">
                         <div class="row">
                             <div class="col-sm-12 col-md-6" style=" text-align: center">
-                                <img src="./assets/FUQ!LogoWithBG.png" width="75%" style="border-radius: 10px" alt="FUQ! Podcast Logo">
+                                <img src="./assets/FUQ!LogoWithBG.png" width="75%" style="border-radius: 10px"
+                                    alt="FUQ! Podcast Logo">
                             </div>
                             <div class="col">
                                 <h3>Why Do I Give A FUQ?</h3>
-                                <p>idk what to put here i guess something about the podcast like what it is and what started it or something kind of professional?</p>
+                                <p>idk what to put here i guess something about the podcast like what it is and what
+                                    started it or something kind of professional?</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
                                     <label for="exampleFormControlTextarea1">Subscribe to our newsletter!</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                                  </div>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="name@example.com">
+                                </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-3 m-auto"><a class="external-links" href="https://www.google.com" target=_blank>SPOTIFY</a></div>
+                            <div class="col-3 m-auto"><a class="external-links" href="https://www.google.com"
+                                    target=_blank>SPOTIFY</a></div>
                             <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>ITUNES</a></div>
-                            <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>CAPTIVATE</a></div>
+                            <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>CAPTIVATE</a>
+                            </div>
                         </div>
                     </div>
                 </div>
