fixed about section

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
         </div>
         <div class="col-sm-12 col-md-6">
             <div class="row right-section">
-                <div class="col-12 top-right-slant">
-                    This is where the about me section will go
+                <div class="col-12 top-right-slant" style="color: white">
+                    <div class="about-content">
+                        This is where the about me section will go
+                    </div>
                 </div>
                 <div class="col-12 middle-right-slant">
                     <div class="middle-content">
@@ -97,22 +99,22 @@
                     <div class="row" style="padding-top:5%; text-align: center">
                         <div class="col padding-box">
                             <div class="black-box m-auto">
-                                <div class="black-box-text">test</div>
+                                <div class="black-box-text">Insta</div>
                             </div>
                         </div>
                         <div class="col padding-box">
                             <div class="black-box m-auto">
-                                <div class="black-box-text">test</div>
+                                <div class="black-box-text">FaceB</div>
                             </div>
                         </div>
                         <div class="col padding-box">
                             <div class="black-box m-auto">
-                                <div class="black-box-text">test</div>
+                                <div class="black-box-text">Twit</div>
                             </div>
                         </div>
                         <div class="col padding-box">
                             <div class="black-box m-auto">
-                                <div class="black-box-text">test</div>
+                                <div class="black-box-text">Oth?</div>
                             </div>
                         </div>
                     </div>
