added see more, need to add see less, testing if white bar on side shows up on mobile or if it is a chrome bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Follow Up Questions Podcast</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -60,8 +60,10 @@
         <div class="col-sm-12 col-md-6">
             <div class="row right-section">
                 <div class="col-12 top-right-slant" style="color: white">
-                    <div class="about-content">
-                        This is where the about me section will go
+                    <div class="row">
+                        <div class="col-sm-12 col-md-6">Holly is overly prepared for the zombie apocalypse and is willing to tell anyone at any time how much they are not ready for the impending demise that will totally happen one day, totally...</div>
+                        
+                        <div class="col-sm-12 col-md-6 bottom-about">Julie is overly prepared for literally anything else and when the zombie apocalypse happens will have no gas in her car, leaving her stranded and waiting for Holly to come save the day.</div>
                     </div>
                 </div>
                 <div class="col-12 middle-right-slant">
@@ -86,7 +88,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" style="padding-bottom: 5%">
                             <div class="col-3 m-auto"><a class="external-links" href="https://www.google.com"
                                     target=_blank>SPOTIFY</a></div>
                             <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>ITUNES</a></div>
@@ -96,25 +98,25 @@
                     </div>
                 </div>
                 <div class="col-12 bottom-right-slant">
-                    <div class="row" style="padding-top:5%; text-align: center">
+                    <div class="row social-links">
                         <div class="col padding-box">
-                            <div class="black-box m-auto">
-                                <div class="black-box-text">Insta</div>
+                            <div class="card">
+                                Insta
                             </div>
                         </div>
                         <div class="col padding-box">
-                            <div class="black-box m-auto">
-                                <div class="black-box-text">FaceB</div>
+                            <div class="card">
+                                FaceB
                             </div>
                         </div>
                         <div class="col padding-box">
-                            <div class="black-box m-auto">
-                                <div class="black-box-text">Twit</div>
+                            <div class="card">
+                                Twit
                             </div>
                         </div>
                         <div class="col padding-box">
-                            <div class="black-box m-auto">
-                                <div class="black-box-text">Oth?</div>
+                            <div class="card">
+                                oth?
                             </div>
                         </div>
                     </div>
