final push for the night, added fontawesom

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Follow Up Questions Podcast</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 
@@ -61,9 +62,13 @@
             <div class="row right-section">
                 <div class="col-12 top-right-slant" style="color: white">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6">Holly is overly prepared for the zombie apocalypse and is willing to tell anyone at any time how much they are not ready for the impending demise that will totally happen one day, totally...</div>
-                        
-                        <div class="col-sm-12 col-md-6 bottom-about">Julie is overly prepared for literally anything else and when the zombie apocalypse happens will have no gas in her car, leaving her stranded and waiting for Holly to come save the day.</div>
+                        <div class="col-sm-12 col-md-6">Holly is overly prepared for the zombie apocalypse and is
+                            willing to tell anyone at any time how much they are not ready for the impending demise that
+                            will totally happen one day, totally...</div>
+
+                        <div class="col-sm-12 col-md-6 bottom-about">Julie is overly prepared for literally anything
+                            else and when the zombie apocalypse happens will have no gas in her car, leaving her
+                            stranded and waiting for Holly to come save the day.</div>
                     </div>
                 </div>
                 <div class="col-12 middle-right-slant">
@@ -101,22 +106,30 @@
                     <div class="row social-links">
                         <div class="col padding-box">
                             <div class="card">
-                                Insta
+                                <div style="padding: 12.5% 5%">
+                                    <i class="fab fa-instagram fa-3x"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="col padding-box">
                             <div class="card">
-                                FaceB
+                                <div style="padding: 12.5% 5%">
+                                    <i class="fab fa-facebook fa-3x"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="col padding-box">
                             <div class="card">
-                                Twit
+                                <div style="padding: 12.5% 5%">
+                                    <i class="fab fa-twitter fa-3x"></i>
+                                </div>
                             </div>
                         </div>
                         <div class="col padding-box">
                             <div class="card">
-                                oth?
+                                <div style="padding: 12.5% 5%">
+                                    oth?
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -126,6 +139,7 @@
     </div>
 
     <script src="./js/main.js"></script>
+    <script src="https://kit.fontawesome.com/ba87b9c17d.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
