changed some colors

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Follow Up Questions Podcast</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
@@ -105,28 +106,28 @@
                 <div class="col-12 bottom-right-slant">
                     <div class="row social-links">
                         <div class="col padding-box">
-                            <div class="card">
+                            <div class="card" id="social">
                                 <div style="padding: 12.5% 5%">
                                     <i class="fab fa-instagram fa-3x"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="col padding-box">
-                            <div class="card">
+                            <div class="card" id="social">
                                 <div style="padding: 12.5% 5%">
                                     <i class="fab fa-facebook fa-3x"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="col padding-box">
-                            <div class="card">
+                            <div class="card" id="social">
                                 <div style="padding: 12.5% 5%">
                                     <i class="fab fa-twitter fa-3x"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="col padding-box">
-                            <div class="card">
+                            <div class="card" id="social">
                                 <div style="padding: 12.5% 5%">
                                     oth?
                                 </div>
