--- a/index.html
+++ b/index.html
@@ -80,17 +80,21 @@
                                     alt="FUQ! Podcast Logo">
                             </div>
                             <div class="col">
-                                <h3>Why Do I Give A FUQ?</h3>
-                                <p>idk what to put here i guess something about the podcast like what it is and what
+                                <h3 class="about-pod-title">Why Do I Give A FUQ?</h3>
+                                <p class="about-pod-text">idk what to put here i guess something about the podcast like
+                                    what it is and what
                                     started it or something kind of professional?</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
-                                    <label for="exampleFormControlTextarea1">Subscribe to our newsletter!</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                                        placeholder="name@example.com">
+                                    <div class="input-group mb-3">
+                                        <input type="text" id="newsletter-email" class="form-control" placeholder="Your Email" aria-label="Subscribe to out newsletter!" aria-describedby="basic-addon2">
+                                        <div class="input-group-append">
+                                          <button class="btn btn-info" type="button" id="newsletter-btn">Subscribe!</button>
+                                        </div>
+                                      </div>
                                 </div>
                             </div>
                         </div>
