--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                         </div>
                         <div class="row">
                             <div class="col">
-                                <div class="form-group">
+                                <div class="form-group input-sizing">
                                     <div class="input-group mb-3">
-                                        <input type="text" id="newsletter-email" class="form-control" placeholder="Your Email" aria-label="Subscribe to out newsletter!" aria-describedby="basic-addon2">
+                                        <input type="email" id="newsletter-email" class="form-control" placeholder="Your Email" aria-label="Subscribe to out newsletter!" aria-describedby="basic-addon2">
                                         <div class="input-group-append">
                                           <button class="btn btn-info" type="button" id="newsletter-btn">Subscribe!</button>
                                         </div>
