--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                                 <img src="./assets/FUQ!LogoWithBG.png" width="75%" style="border-radius: 10px"
                                     alt="FUQ! Podcast Logo">
                             </div>
-                            <div class="col">
-                                <h3 class="about-pod-title">Why Do I Give A FUQ?</h3>
-                                <p class="about-pod-text">idk what to put here i guess something about the podcast like
+                            <div class="col about-pod">
+                                <h3>Why Do I Give A FUQ?</h3>
+                                <p>idk what to put here i guess something about the podcast like
                                     what it is and what
                                     started it or something kind of professional?</p>
                             </div>
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row" style="padding-bottom: 5%">
+                        <div class="row">
                             <div class="col-3 m-auto"><a class="external-links" href="https://www.google.com"
                                     target=_blank>SPOTIFY</a></div>
                             <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>ITUNES</a></div>
