--- a/index.html
+++ b/index.html
@@ -90,11 +90,14 @@
                             <div class="col">
                                 <div class="form-group input-sizing">
                                     <div class="input-group mb-3">
-                                        <input type="email" id="newsletter-email" class="form-control" placeholder="Your Email" aria-label="Subscribe to out newsletter!" aria-describedby="basic-addon2">
+                                        <input type="email" id="newsletter-email" class="form-control"
+                                            placeholder="Your Email" aria-label="Subscribe to out newsletter!"
+                                            aria-describedby="basic-addon2">
                                         <div class="input-group-append">
-                                          <button class="btn btn-info" type="button" id="newsletter-btn">Subscribe!</button>
+                                            <button class="btn btn-info" type="button"
+                                                id="newsletter-btn">Subscribe!</button>
                                         </div>
-                                      </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
