--- a/index.html
+++ b/index.html
@@ -2,161 +2,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Follow Up Questions Podcast</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
-
-    <!-- <style>
-        .quote {
-            background: #41ade5;
-            color: #fff;
-            position: relative;
-            z-index: 1;
-        }
-
-        .quote:after {
-            background: inherit;
-            bottom: 0;
-            content: '';
-            display: block;
-            height: 50%;
-            left: 0;
-            position: absolute;
-            right: 0;
-            transform: skewY(-1.5deg);
-            transform-origin: 100%;
-            z-index: -1;
-        }
-    </style> -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Follow Up Questions Podcast</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <div class="row" style="margin:0;">
-        <div class="col-sm-12 col-md-6">
-            <div class="row left-section">
-                <div class="col-12 top-left-slant">
-                    <img src="./assets/banner.png" class="banner" alt="FUQ! Podcast Banner">
-                </div>
-                <div class="col-12 bottom-left-slant">
-                    <div class="row overflow-scroll" id="episodeList">
-                        <!-- <div class="col-sm-12 col-md-3">
-                            <div class="card">
-                                <div class="card-header">
-                                    test
-                                </div>
-                                <div class="card-body">
-                                    testing
-                                </div>
-                            </div>
-                        </div> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6">
-            <div class="row right-section">
-                <div class="col-12 top-right-slant" style="color: white">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-6">Holly is overly prepared for the zombie apocalypse and is
-                            willing to tell anyone at any time how much they are not ready for the impending demise that
-                            will totally happen one day, totally...</div>
+  <div class="main">
+    <!-- START HEADER -->
+    <section class="header">
+      <img class="rounded mx-auto d-block banner" src="./assets/banner.png" />
+    </section>
+    <!-- END HEADER -->
 
-                        <div class="col-sm-12 col-md-6 bottom-about">Julie is overly prepared for literally anything
-                            else and when the zombie apocalypse happens will have no gas in her car, leaving her
-                            stranded and waiting for Holly to come save the day.</div>
-                    </div>
-                </div>
-                <div class="col-12 middle-right-slant">
-                    <div class="middle-content">
-                        <div class="row">
-                            <div class="col-sm-12 col-md-6" style=" text-align: center">
-                                <img src="./assets/FUQ!LogoWithBG.png" width="75%" style="border-radius: 10px"
-                                    alt="FUQ! Podcast Logo">
-                            </div>
-                            <div class="col about-pod">
-                                <h3>Why Do I Give A FUQ?</h3>
-                                <p>idk what to put here i guess something about the podcast like
-                                    what it is and what
-                                    started it or something kind of professional?</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <div class="form-group input-sizing">
-                                    <div class="input-group mb-3">
-                                        <input type="email" id="newsletter-email" class="form-control"
-                                            placeholder="Your Email" aria-label="Subscribe to out newsletter!"
-                                            aria-describedby="basic-addon2">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-info" type="button"
-                                                id="newsletter-btn">Subscribe!</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-3 m-auto"><a class="external-links" href="https://www.google.com"
-                                    target=_blank>SPOTIFY</a></div>
-                            <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>ITUNES</a></div>
-                            <div class="col-3 m-auto"><a class="external-links" href="" target=_blank>CAPTIVATE</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 bottom-right-slant">
-                    <div class="row social-links">
-                        <div class="col padding-box">
-                            <div class="card" id="social">
-                                <div style="padding: 12.5% 5%">
-                                    <i class="fab fa-instagram fa-3x"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col padding-box">
-                            <div class="card" id="social">
-                                <div style="padding: 12.5% 5%">
-                                    <i class="fab fa-facebook fa-3x"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col padding-box">
-                            <div class="card" id="social">
-                                <div style="padding: 12.5% 5%">
-                                    <i class="fab fa-twitter fa-3x"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col padding-box">
-                            <div class="card" id="social">
-                                <div style="padding: 12.5% 5%">
-                                    oth?
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- START NAVIGATION BUTON (LOGO) -->
+    <section class="navigation">
+      <img height="100px" class="rounded" src="./assets/FUQ!Logo.png" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" />
+    </section>
+    <!-- END NAVIGATION BUTTON -->
+
+
+    <!-- START OFFCANVAS NAVIGATION -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Navigation</h5>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <a href="#header"><h2>Home</h2></a>
+        
+      </div>
     </div>
+    <!-- END OFFCANVAS NAVIGATION -->
+  </div>
 
-    <script src="./js/main.js"></script>
-    <script src="https://kit.fontawesome.com/ba87b9c17d.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+  <script src="./js/main.js"></script>
+  <script src="https://kit.fontawesome.com/ba87b9c17d.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
