added about section

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <!-- START MAIN BODY SECTION -->
     <section class="body">
       <div class="row" style="margin: 0%;">
-        <div class="col-md-4 col-sm-12 order-md-2" style="min-height: 25vh;">
+        <div class="col-md-4 col-sm-12 order-md-2" style="min-height: 25vh;margin-bottom: 5%;">
           <div class="card" style="background-color: #8659a8; color: white;margin:0px 2.5%">
             <div class="card-body">
-              TESTING ABOIUT US SECTION
+              <h3>Do you have one of those friends you can talk to about anything? Like, your Ride or Die person who only judges you to your face? That bestie who can be brutally honest and loving all at the same time? That friend who can make you laugh until you cry? If not, you now have us! 
+                We are Holly and Julie!  Best friends who have a lot to say and so many follow up questions (FUQs) to ask. Join us for fun, laughter and more FUQs to better understand what the heck is going on in each other's minds. We are always ready for fun, laughter and a good story. Join us to find out what the FUQ we talk about next?</h3>
             </div>
           </div>
         </div>
@@ -63,7 +64,10 @@
             <i class="fab fa-twitter-square fa-3x"></i>
           </div>
           <div class="col-3 footer-placement">
-            <i class="fas fa-bars fa-3x" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"></i>
+            <a href="https://twitch.tv/fuqpodcast" target="_blank">
+              <i class="fab fa-twitch fa-3x"></i>
+              <!-- <i class="fas fa-bars fa-3x" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"></i> -->
+            </a>
           </div>
         </div>
       </footer>
