new url on embed test

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 width="100%">
               </iframe> -->
               <!-- <div id="twitch-embed"></div> -->
-              <iframe src="https://player.twitch.tv/?video=1070479244&parent=jayromulus.github.io/FUQPodcast/" frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
+              <iframe src="https://player.twitch.tv/?video=1070479244&parent=jayromulus.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
 
 
             <!-- </div> -->
