testing deployed twitch link

--- a/index.html
+++ b/index.html
@@ -45,19 +45,8 @@
         <div class="col-md-8 col-sm-12 order-md-1">
           <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5">
             <!-- <div class="card-body"> -->
-              <!-- <video>
-                <source src="https://www.twitch.tv/videos/1070479244" controls type="video/mp4" />
-              </video> -->
-              <!-- <iframe
-                src="https://player.twitch.tv/?channel=jayromulus"
-                frameborder="0"
-                scrolling="no"
-                allowfullscreen="true"
-                height="100%"
-                width="100%">
-              </iframe> -->
-              <!-- <div id="twitch-embed"></div> -->
-              <iframe src="https://player.twitch.tv/?video=1070479244&parent=jayromulus.github.io" frameborder="0" allowfullscreen="true" scrolling="no" width="100%"></iframe>
+              
+              <iframe src="https://player.twitch.tv/?video=1070479244&parent=fuqpodcast.com" frameborder="0" allowfullscreen="true" scrolling="no" width="100%" height="56.25%"></iframe>
 
 
             <!-- </div> -->
