--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5">
             <!-- <div class="card-body"> -->
               
-              <iframe src="https://player.twitch.tv/?video=1070479244&parent=fuqpodcast.com" frameborder="0" allowfullscreen="true" scrolling="no" width="100%" height="56.25%"></iframe>
+              <iframe src="https://player.twitch.tv/?video=1070479244&parent=fuqpodcast.com&parent=www.fuqpodcast.com" frameborder="0" allowfullscreen="true" scrolling="no" width="100%" height="56.25%"></iframe>
 
 
             <!-- </div> -->
