--- a/index.html
+++ b/index.html
@@ -21,24 +21,13 @@
     </section>
     <!-- END HEADER -->
 
-    <!-- START NAVIGATION BUTON (LOGO) -->
-    <!-- <section class="navigation"> -->
-    <!-- <img height="100px" class="rounded" src="./assets/FUQ!Logo.png" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample" /> -->
-
-    <!-- </section> -->
-    <!-- END NAVIGATION BUTTON -->
-
     <!-- START MAIN BODY SECTION -->
     <section class="body">
       <div class="row" style="margin: 0%;">
         <div class="col-md-4 col-sm-12 order-md-2" style="min-height: 25vh;margin-bottom: 5%;">
           <div class="card" style="background-color: #8659a8; color: white;margin:0px 2.5%;">
             <div class="card-body">
-              <h3>Do you have one of those friends you can talk to about anything? Like, your Ride or Die person who
-                only judges you to your face? That bestie who can be brutally honest and loving all at the same time?
-                We are Holly and Julie! Best friends who have a lot to say and so many follow up questions (FUQs) to
-                ask. We are always ready for fun, laughter and a good story. Join us to find out what the FUQ we talk
-                about next?</h3>
+              <h3>A couple of Besties with a lot to talk about and endless follow up questions. Join us to find out what the actual FUQs are!</h3>
             </div>
           </div>
         </div>
@@ -61,13 +50,13 @@
       <footer>
         <div class="row" style="margin: 0%;">
           <div class="col-3 footer-placement">
-            <i class="fab fa-instagram fa-3x"></i>
+            <a href="https://instagram.com/fuqpodcast" target="_blank"><i class="fab fa-instagram fa-3x"></i></a>
           </div>
           <div class="col-3 footer-placement">
-            <i class="fab fa-facebook-square fa-3x"></i>
+            <a href="https://facebook.com/FUQPodcast" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
           </div>
           <div class="col-3 footer-placement">
-            <i class="fab fa-twitter-square fa-3x"></i>
+            <i class="fab fa-youtube fa-3x"></i>
           </div>
           <div class="col-3 footer-placement">
             <a href="https://twitch.tv/fuqpodcast" target="_blank">
@@ -77,6 +66,7 @@
           </div>
         </div>
       </footer>
+      <!-- https://fontawesome.com/v5.15/icons?d=gallery&p=2 -->
     </section>
     <!-- END FOOTER -->
 
