--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               
               <!-- <iframe src="https://player.twitch.tv/?video=1070479244&parent=fuqpodcast.com&parent=www.fuqpodcast.com" frameborder="0" allowfullscreen="true" scrolling="no" width="100%" height="56.25%"></iframe> -->
 
-              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/plNIhaShxzo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/plNIhaShxzo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
             <!-- </div> -->
