--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="col-md-8 col-sm-12 order-md-1">
-          <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5">
+          <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5; height: 45vh">
             <!-- <div class="card-body"> -->
               <!-- comment to push code -->
               
