episode 1 up and list on side

--- a/index.html
+++ b/index.html
@@ -23,26 +23,27 @@
 
     <!-- START MAIN BODY SECTION -->
     <section class="body">
-      <div class="row" style="margin: 0%;">
-        <div class="col-md-4 col-sm-12 order-md-2" style="min-height: 25vh;margin-bottom: 5%;">
-          <div class="card" style="background-color: #8659a8; color: white;margin:0px 2.5%;">
+      <div class="row" style="margin: 0%; height: 100%">
+        <div class="col-md-4 col-sm-12 order-md-2 sideContainer" style="min-height: 25vh;margin-bottom: 5%;">
+          <div class="card" style="background-color: #8659a8; color: white;margin:0 0 1.5% 0;">
             <div class="card-body">
               <h3>A couple of Besties with a lot to talk about and endless follow up questions. Join us to find out what the actual FUQs are!</h3>
             </div>
           </div>
         </div>
-        <div class="col-md-8 col-sm-12 order-md-1">
-          <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5; height: 45vh">
+        <div class="col-md-8 col-sm-12 order-md-1 mainContainer">
+          <!-- <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5; height: 100%"> -->
             <!-- <div class="card-body"> -->
               <!-- comment to push code -->
               
               <!-- <iframe src="https://player.twitch.tv/?video=1070479244&parent=fuqpodcast.com&parent=www.fuqpodcast.com" frameborder="0" allowfullscreen="true" scrolling="no" width="100%" height="56.25%"></iframe> -->
 
-              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/plNIhaShxzo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/plNIhaShxzo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+              <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dADOl5En4T4" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
-
+ 
             <!-- </div> -->
-          </div>
+          <!-- </div> -->
         </div>
       </div>
     </section>
@@ -59,7 +60,7 @@
             <a href="https://facebook.com/FUQPodcast" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
           </div>
           <div class="col-3 footer-placement">
-            <i class="fab fa-youtube fa-3x"></i>
+            <a href="https://www.youtube.com/channel/UCKEbRYWbA4e1-VRBHxKRauw" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
           </div>
           <div class="col-3 footer-placement">
             <a href="https://twitch.tv/fuqpodcast" target="_blank">
