--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="128x128" href="./assets/FUQ!LogoWithBG.png">
+  <link rel="icon" sizes="192x192" href="./assets/FUQ!LogoWithBG.png">
 </head>
 
 <body>
