updated first ep on top

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-8 col-sm-12 order-md-1 mainContainer">
+        <!-- <div class="col-md-8 col-sm-12 order-md-1 mainContainer"> -->
+        <div class="col-md-8 col-sm-12 mainContainer">
           <!-- <div class="card" style="background-color: #0c8281; color: white;margin:0px 2.5; height: 100%"> -->
             <!-- <div class="card-body"> -->
               <!-- comment to push code -->
